// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot testing MarketCard Component renders correctly with Market card label 1`] = `
.emotion-0 {
  margin: 0;
  color: #1976d2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  overflow: hidden;
  margin: 1em;
  width: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 16px;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4.hasBackground {
  background-color: rgba(29, 34, 39, 0.04);
}

.emotion-4.xs {
  width: 24px;
  height: 24px;
}

.emotion-4.sm {
  width: 32px;
  height: 32px;
}

.emotion-4.md {
  width: 40px;
  height: 40px;
}

.emotion-4.lg {
  width: 48px;
  height: 48px;
}

.emotion-4.xl {
  width: 64px;
  height: 64px;
}

.emotion-4.xxl {
  width: 77px;
  height: 77px;
}

.emotion-4.max {
  width: 144px;
  height: 144px;
}

.emotion-5 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
}

.emotion-8>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-8>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-10 {
  border-radius: 0.2em;
  padding: 0.3em 0.6em;
  display: inline-block;
  background-color: #1976d2;
  color: #fff;
}

.emotion-10.label--icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10.label--icon>* {
  margin-right: 0.3em;
}

.emotion-10.label--icon>svg {
  width: 0.8em;
  height: 0.8em;
}

.emotion-11 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
}

.emotion-11.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.emotion-12 {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  padding: 0.3em 0;
}

.emotion-13 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 300;
  font-size: 3.75rem;
  line-height: 1.2;
  letter-spacing: -0.00833em;
  font-weight: 700;
}

.emotion-13.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

<a
  className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-0"
  href="/"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root emotion-1"
  >
    <div
      className="MuiCardHeader-root emotion-2"
    >
      <div
        className="MuiCardHeader-avatar emotion-3"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular xl hasBackground emotion-4"
        >
          <img
            alt="Market is open"
            className="MuiAvatar-img emotion-5"
            src="https://w.wallhaven.cc/full/vg/wallhaven-vg7lv3.jpg"
          />
        </div>
      </div>
      <div
        className="MuiCardHeader-content emotion-6"
      >
        <span
          className="MuiTypography-root MuiTypography-body2 MuiCardHeader-title emotion-7"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-8"
          >
            <div
              className="MuiGrid-root MuiGrid-item emotion-9"
            >
              <span
                className=" emotion-10"
              >
                <div
                  className="MuiTypography-root MuiTypography-h5  emotion-11"
                  lines={4}
                >
                  Market
                </div>
              </span>
            </div>
          </div>
          <div
            className="emotion-12"
          >
            <h2
              className="MuiTypography-root MuiTypography-h2  emotion-13"
              lines={4}
            >
              Market is open
            </h2>
          </div>
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`Snapshot testing MarketCard Component renders correctly with closed time 1`] = `
.emotion-0 {
  margin: 0;
  color: #1976d2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  overflow: hidden;
  margin: 1em;
  width: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 16px;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4.hasBackground {
  background-color: rgba(29, 34, 39, 0.04);
}

.emotion-4.xs {
  width: 24px;
  height: 24px;
}

.emotion-4.sm {
  width: 32px;
  height: 32px;
}

.emotion-4.md {
  width: 40px;
  height: 40px;
}

.emotion-4.lg {
  width: 48px;
  height: 48px;
}

.emotion-4.xl {
  width: 64px;
  height: 64px;
}

.emotion-4.xxl {
  width: 77px;
  height: 77px;
}

.emotion-4.max {
  width: 144px;
  height: 144px;
}

.emotion-5 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
}

.emotion-8>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-8>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-10 {
  border-radius: 0.2em;
  padding: 0.3em 0.6em;
  display: inline-block;
  background-color: #1976d2;
  color: #fff;
}

.emotion-10.label--icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10.label--icon>* {
  margin-right: 0.3em;
}

.emotion-10.label--icon>svg {
  width: 0.8em;
  height: 0.8em;
}

.emotion-11 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
}

.emotion-11.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.emotion-12 {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  padding: 0.3em 0;
}

.emotion-13 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 300;
  font-size: 3.75rem;
  line-height: 1.2;
  letter-spacing: -0.00833em;
  font-weight: 700;
}

.emotion-13.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

<a
  className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-0"
  href="/"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root emotion-1"
  >
    <div
      className="MuiCardHeader-root emotion-2"
    >
      <div
        className="MuiCardHeader-avatar emotion-3"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular xl hasBackground emotion-4"
        >
          <img
            alt="Closed Market"
            className="MuiAvatar-img emotion-5"
            src="https://w.wallhaven.cc/full/vg/wallhaven-vg7lv3.jpg"
          />
        </div>
      </div>
      <div
        className="MuiCardHeader-content emotion-6"
      >
        <span
          className="MuiTypography-root MuiTypography-body2 MuiCardHeader-title emotion-7"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-8"
          >
            <div
              className="MuiGrid-root MuiGrid-item emotion-9"
            >
              <span
                className=" emotion-10"
              >
                <div
                  className="MuiTypography-root MuiTypography-h5  emotion-11"
                  lines={4}
                >
                  Market
                </div>
              </span>
            </div>
          </div>
          <div
            className="emotion-12"
          >
            <h2
              className="MuiTypography-root MuiTypography-h2  emotion-13"
              lines={4}
            >
              Closed Market
            </h2>
          </div>
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`Snapshot testing MarketCard Component renders correctly with hash generated icon 1`] = `
.emotion-0 {
  margin: 0;
  color: #1976d2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  overflow: hidden;
  margin: 1em;
  width: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 16px;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4.hasBackground {
  background-color: rgba(29, 34, 39, 0.04);
}

.emotion-4.xs {
  width: 24px;
  height: 24px;
}

.emotion-4.sm {
  width: 32px;
  height: 32px;
}

.emotion-4.md {
  width: 40px;
  height: 40px;
}

.emotion-4.lg {
  width: 48px;
  height: 48px;
}

.emotion-4.xl {
  width: 64px;
  height: 64px;
}

.emotion-4.xxl {
  width: 77px;
  height: 77px;
}

.emotion-4.max {
  width: 144px;
  height: 144px;
}

.emotion-5 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
}

.emotion-8>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-8>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-10 {
  border-radius: 0.2em;
  padding: 0.3em 0.6em;
  display: inline-block;
  background-color: #1976d2;
  color: #fff;
}

.emotion-10.label--icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10.label--icon>* {
  margin-right: 0.3em;
}

.emotion-10.label--icon>svg {
  width: 0.8em;
  height: 0.8em;
}

.emotion-11 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
}

.emotion-11.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.emotion-12 {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  padding: 0.3em 0;
}

.emotion-13 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 300;
  font-size: 3.75rem;
  line-height: 1.2;
  letter-spacing: -0.00833em;
  font-weight: 700;
}

.emotion-13.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

<a
  className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-0"
  href="/"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root emotion-1"
  >
    <div
      className="MuiCardHeader-root emotion-2"
    >
      <div
        className="MuiCardHeader-avatar emotion-3"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular xl hasBackground emotion-4"
        >
          <img
            alt="QmYgtfMBZo3ajW5rmUesVfHSJu5nT6fT3cRcvr2fpfbzo3"
            className="MuiAvatar-img emotion-5"
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABmJLR0QA/wD/AP+gvaeTAAAAq0lEQVRYhWPUSX77nwEPuLhDCYW/YQYTPuUMARn/UPj6HvfwqsdvGh3AqAMY/0rz400DhOKQEEBPQ+hgwENg1AGM6OUAoTijFKCnqQEPgVEHMK7dLIiSBtDLcnRAqFwglIbQ65IBD4FRB7CgCxCK48YAFbzy+gwE9DOg6h/wEBh1AEZdgA7Q8zWp5cBom3DQO4CF0jgmFaDrH/AQGHUAyW1CStPIaJtw0DkAAAhNNxMjfOg8AAAAAElFTkSuQmCC"
          />
        </div>
      </div>
      <div
        className="MuiCardHeader-content emotion-6"
      >
        <span
          className="MuiTypography-root MuiTypography-body2 MuiCardHeader-title emotion-7"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-8"
          >
            <div
              className="MuiGrid-root MuiGrid-item emotion-9"
            >
              <span
                className=" emotion-10"
              >
                <div
                  className="MuiTypography-root MuiTypography-h5  emotion-11"
                  lines={4}
                >
                  Auction
                </div>
              </span>
            </div>
          </div>
          <div
            className="emotion-12"
          >
            <h2
              className="MuiTypography-root MuiTypography-h2  emotion-13"
              lines={4}
            >
              Market card with image icon
            </h2>
          </div>
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`Snapshot testing MarketCard Component renders correctly with image icon 1`] = `
.emotion-0 {
  margin: 0;
  color: #1976d2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
  overflow: hidden;
  margin: 1em;
  width: 100%;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  margin-right: 16px;
}

.emotion-4 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-size: 1.25rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-4.hasBackground {
  background-color: rgba(29, 34, 39, 0.04);
}

.emotion-4.xs {
  width: 24px;
  height: 24px;
}

.emotion-4.sm {
  width: 32px;
  height: 32px;
}

.emotion-4.md {
  width: 40px;
  height: 40px;
}

.emotion-4.lg {
  width: 48px;
  height: 48px;
}

.emotion-4.xl {
  width: 64px;
  height: 64px;
}

.emotion-4.xxl {
  width: 77px;
  height: 77px;
}

.emotion-4.max {
  width: 144px;
  height: 144px;
}

.emotion-5 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-6 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.emotion-7 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 0.875rem;
  line-height: 1.43;
  letter-spacing: 0.01071em;
  display: block;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
}

.emotion-8>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-8>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-9 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-10 {
  border-radius: 0.2em;
  padding: 0.3em 0.6em;
  display: inline-block;
  background-color: #1976d2;
  color: #fff;
}

.emotion-10.label--icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10.label--icon>* {
  margin-right: 0.3em;
}

.emotion-10.label--icon>svg {
  width: 0.8em;
  height: 0.8em;
}

.emotion-11 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  line-height: 1.334;
  letter-spacing: 0em;
}

.emotion-11.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.emotion-12 {
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  overflow: hidden;
  padding: 0.3em 0;
}

.emotion-13 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 300;
  font-size: 3.75rem;
  line-height: 1.2;
  letter-spacing: -0.00833em;
  font-weight: 700;
}

.emotion-13.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.emotion-14 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -8px;
  width: calc(100% + 8px);
  margin-left: -8px;
  font-size: 0.8em;
  padding: 1em;
  padding-top: 0;
  margin-top: auto;
}

.emotion-14>.MuiGrid-item {
  padding-top: 8px;
}

.emotion-14>.MuiGrid-item {
  padding-left: 8px;
}

.emotion-15 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -24px;
  width: calc(100% + 24px);
  margin-left: -24px;
  -webkit-flex-basis: calc(100% + 24px);
  -ms-flex-preferred-size: calc(100% + 24px);
  flex-basis: calc(100% + 24px);
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: calc(100% + 24px);
}

.emotion-15>.MuiGrid-item {
  padding-top: 24px;
}

.emotion-15>.MuiGrid-item {
  padding-left: 24px;
}

.emotion-16 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 50%;
  -ms-flex-preferred-size: 50%;
  flex-basis: 50%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 50%;
}

.emotion-17 {
  color: rgba(29, 34, 39, 0.65);
  padding: 0.2em;
}

.emotion-17.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-17.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-18 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 2.125rem;
  line-height: 1.235;
  letter-spacing: 0.00735em;
}

.emotion-18.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.emotion-19 {
  color: rgba(42, 184, 0, 1);
  padding: 0.2em;
}

.emotion-19.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-20 {
  margin: 0;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 400;
  font-size: 3rem;
  line-height: 1.167;
  letter-spacing: 0em;
}

.emotion-20.truncate {
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.emotion-24 {
  color: rgba(255, 57, 57, 1);
  padding: 0.2em;
}

.emotion-24.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-24.hasIcon>* {
  margin-left: 0.2em;
}

.emotion-35 {
  padding: 0.2em;
}

.emotion-35.hasIcon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-35.hasIcon>* {
  margin-left: 0.2em;
}

<a
  className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone emotion-0"
  href="/"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
>
  <div
    className="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root emotion-1"
  >
    <div
      className="MuiCardHeader-root emotion-2"
    >
      <div
        className="MuiCardHeader-avatar emotion-3"
      >
        <div
          className="MuiAvatar-root MuiAvatar-circular xl hasBackground emotion-4"
        >
          <img
            alt="Market card with image icon"
            className="MuiAvatar-img emotion-5"
            src="https://w.wallhaven.cc/full/vg/wallhaven-vg7lv3.jpg"
          />
        </div>
      </div>
      <div
        className="MuiCardHeader-content emotion-6"
      >
        <span
          className="MuiTypography-root MuiTypography-body2 MuiCardHeader-title emotion-7"
        >
          <div
            className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-8"
          >
            <div
              className="MuiGrid-root MuiGrid-item emotion-9"
            >
              <span
                className=" emotion-10"
              >
                <div
                  className="MuiTypography-root MuiTypography-h5  emotion-11"
                  lines={4}
                >
                  Auction
                </div>
              </span>
            </div>
          </div>
          <div
            className="emotion-12"
          >
            <h2
              className="MuiTypography-root MuiTypography-h2  emotion-13"
              lines={4}
            >
              Market card with image icon
            </h2>
          </div>
        </span>
      </div>
    </div>
    <div
      className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 emotion-14"
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-15"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-16"
        >
          <div
            className="emotion-17"
          >
            <h3
              className="MuiTypography-root MuiTypography-h4  emotion-18"
              lines={4}
            >
              Yes
            </h3>
          </div>
          <div
            className="emotion-19"
          >
            <h3
              className="MuiTypography-root MuiTypography-h3  emotion-20"
              lines={4}
            >
              14
              %
            </h3>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-16"
        >
          <div
            className="emotion-17"
          >
            <h3
              className="MuiTypography-root MuiTypography-h4  emotion-18"
              lines={4}
            >
              No
            </h3>
          </div>
          <div
            className="emotion-24"
          >
            <h3
              className="MuiTypography-root MuiTypography-h3  emotion-20"
              lines={4}
            >
              5
              %
            </h3>
          </div>
        </div>
      </div>
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-3 MuiGrid-grid-xs-12 emotion-15"
      >
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-16"
        >
          <div
            className="hasIcon emotion-17"
          >
            <h3
              className="MuiTypography-root MuiTypography-h4  emotion-18"
              lines={4}
            >
              WEEKLY
            </h3>
          </div>
          <div
            className="emotion-19"
          >
            <h3
              className="MuiTypography-root MuiTypography-h3  emotion-20"
              lines={4}
            >
              Yes
               
              95
            </h3>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-6 emotion-16"
        >
          <div
            className=" emotion-17"
          >
            <h3
              className="MuiTypography-root MuiTypography-h4  emotion-18"
              lines={4}
            >
              VOLUME
            </h3>
          </div>
          <div
            className="emotion-35"
          >
            <h3
              className="MuiTypography-root MuiTypography-h3  emotion-20"
              lines={4}
            >
               
              5
            </h3>
          </div>
        </div>
      </div>
    </div>
  </div>
</a>
`;
